--- a/package.json
+++ b/package.json
@@ -1,43 +1,41 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
-  "private": true,
-  "description": "TypeScript template action",
-  "main": "lib/main.js",
-  "scripts": {
-    "build": "tsc",
-    "format": "prettier --write '**/*.ts'",
-    "format-check": "prettier --check '**/*.ts'",
-    "lint": "eslint src/**/*.ts",
-    "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
-  },
-  "keywords": [
-    "actions",
-    "node",
-    "setup"
-  ],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@actions/core": "^1.6.0"
-  },
-  "devDependencies": {
-    "@types/node": "^16.10.5",
-    "@typescript-eslint/parser": "^5.8.1",
-    "@vercel/ncc": "^0.31.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-github": "^4.3.2",
-    "eslint-plugin-jest": "^25.3.2",
-    "jest": "^27.2.5",
-    "js-yaml": "^4.1.0",
-    "prettier": "2.5.1",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.4.4"
-  }
+	"name": "prisma-migration-warning-action",
+	"version": "0.0.1",
+	"private": true,
+	"description": "Warns about potentially unsafe Prisma Migrations",
+	"main": "lib/main.js",
+	"scripts": {
+		"build": "tsc",
+		"format": "prettier --write '**/*.ts'",
+		"format-check": "prettier --check '**/*.ts'",
+		"lint": "eslint src/**/*.ts",
+		"package": "ncc build --source-map --license licenses.txt",
+		"all": "npm run build && npm run format && npm run lint && npm run package"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/ianmitchell/prisma-migration-warning-action.git"
+	},
+	"keywords": [
+		"actions",
+		"prisma",
+		"migration"
+	],
+	"author": "Ian Mitchell",
+	"license": "MIT",
+	"dependencies": {
+		"@actions/core": "^1.6.0",
+		"zx": "^5.0.0"
+	},
+	"devDependencies": {
+		"@types/node": "^16.10.5",
+		"@typescript-eslint/parser": "^5.8.1",
+		"@vercel/ncc": "^0.31.1",
+		"eslint": "^7.32.0",
+		"js-yaml": "^4.1.0",
+		"prettier": "2.5.1",
+		"ts-jest": "^27.1.2",
+		"typescript": "^4.4.4",
+		"xo": "^0.48.0"
+	}
 }
