--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@actions/core": "^1.6.0",
+		"@octokit/action": "^3.18.0",
 		"zx": "^5.0.0"
 	},
 	"devDependencies": {
