--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set Node.js 16.x
-        uses: actions/setup-node@latest
+        uses: actions/setup-node@v2
         with:
           node-version: 16.x
 
