--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: "Your name here"
-description: "Provide a description here"
-author: "Your name or organization here"
+name: Ian Mitchell
+description: Checks Pull Requests for potentially unsafe Prisma Migrations
+author: ianmitchell
 inputs:
   main-branch:
     required: false
