--- a/action.yml
+++ b/action.yml
@@ -1,8 +1,9 @@
 name: prisma-migration-warning
 description: Checks Pull Requests for potentially unsafe Prisma Migrations
 author: ianmitchell
-icon: database
-color: purple
+branding:
+  icon: database
+  color: purple
 inputs:
   main-branch:
     required: false
