--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"description": "Warns about potentially unsafe Prisma Migrations",
+	"type": "module",
 	"main": "lib/main.js",
 	"scripts": {
 		"build": "tsc",
