--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
 		"target": "es2021",
-    "module": "ESNext",
+    "module": "amd",
     "outDir": "./lib",
     "rootDir": "./src",
     "strict": true,
